does not work on document instead of body tag

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
     <script>
-      document.body.addEventListener("drop", evt => {
+      document.addEventListener("drop", evt => {
         console.log(evt);
       });
     </script>
