use original code again

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
     <script>
-      document.addEventListener("drop", evt => {
+      document.body.addEventListener("drop", evt => {
+        evt.preventDefault();
         console.log(evt);
       });
     </script>
