add dragover listener to document with preventDefault (makes it work)

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
     <script>
+      document.addEventListener("dragover", evt => {
+        evt.preventDefault();
+      });
+
       document.body.addEventListener("drop", evt => {
         evt.preventDefault();
         console.log(evt);
