--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
     <script>
-      document.addEventListener("dragover", evt => {
+      document.body.addEventListener("dragover", evt => {
         evt.preventDefault();
       });
 
