log evt.dataTransfer property instead, otherwise the files list appears empty in the console

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
       document.body.addEventListener("drop", evt => {
         evt.preventDefault();
-        console.log(evt);
+        console.log(evt.dataTransfer);
       });
     </script>
   </body>
