log first file to make sure we get a proper result in the console

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
       document.body.addEventListener("drop", evt => {
         evt.preventDefault();
-        console.log(evt.dataTransfer);
+        console.log(evt.dataTransfer.files[0]);
       });
     </script>
   </body>
